  - Fixed the Israel "The Passover Massacre" operations when failed Gaza Strip becomes overlord of Israel and instead changed it so that Israel becomes the overlord over the Gaza strip
  - Fixed the "Resource Exports" not properly taking into account subjects when calculating your resource export income

 Database:
  - Added a new scripted trigger "is_autonomy_that_cannot_change_level" to check if a country has a special autonomy level that cannot be changed
  - Changed Destroyers back to being Capital Ships instead of Screen Ships. This will be reverted in a future naval rework
  - Removed older "anti_air artillery" type from ship classes for the older missile system
  - Removed a ton of duplicate equipment variants for the "Error Stop" variant so the game should start a bit faster

 Game Rules:
  - Added a new Game Rule "Disable Investment Bankruptcy Lock" that allows you to send investments to countries while you have the "Bankruptcy Incoming" mission active

 Graphics:
  - Updated the icon for the Nigerian Idea "Blood Oil"

 Localization:
 - Changed all the vehicle hull names from "Light Tank" to "Armored Hull"
 - Added a tooltip to the first "Armored Vehicle Hull" tech that explains you only need to research this

v1.12.0c
 AI:
  - The AI with generic focus tree should no longer take continuous focus "Increase Autonomy" if they have special (i.e. can't upgrade) autonomy level
  - AI should no longer try to increase its autonomy level if it has same ideology as overlord and current autonomy level is not too low (lower than sattelite)
  - AI will take into account interest rates before paying reparations following a raid
  - AI who do not have the "Nuclear Energy" idea will no longer build enrichment facilities
  - AI should no longer try to build nuclear enrichment facilities if they do not have more than 5 nuclear reactors (i.e. don't enrich your own if you don't need to.)
  - Fixed the AI strategy plans for China not working as expected