@@ -94,7 +94,7 @@ ideas = {
 			picture = foreign_capital
 			modifier = {
 				industrial_capacity_factory = 0.035
-				production_factory_efficiency_gain_factor = 0.05 
+				production_factory_efficiency_gain_factor = 0.05
 				high_unemployment_threshold_modifier = 0.05
 				social_cost_multiplier_modifier = 0.35
 			}
@@ -553,7 +553,7 @@ ideas = {
 			picture = party_of_progress
 			modifier = {
 				industrial_capacity_factory = 0.10
-				production_factory_efficiency_gain_factor = 0.05 
+				production_factory_efficiency_gain_factor = 0.05
 				social_cost_multiplier_modifier = 0.25
 			}
 		}
@@ -708,7 +708,7 @@ ideas = {
 				production_factory_efficiency_gain_factor = 0.05
 				consumer_goods_factor = -0.03
 			}
-		} 
+		}
 		ROM_mixed_market_economics2 = {
 			on_add = {
 				log = "[GetDateText]: [Root.GetName]: add idea ROM_mixed_market_economics2"
@@ -1042,6 +1042,7 @@ ideas = {
 			}
 		}
 		ROM_nordic_model = {
+			name = ROM_nordic_model_idea
 			on_add = {
 				log = "[GetDateText]: [Root.GetName]: add idea ROM_nordic_model"
 				ingame_update_setup = yes
@@ -1054,6 +1055,8 @@ ideas = {
 			}
 		}
 		ROM_nordic_model2 = {
+			name = ROM_nordic_model_idea
+
 			on_add = {
 				log = "[GetDateText]: [Root.GetName]: add idea ROM_nordic_model2"
 				ingame_update_setup = yes
@@ -1068,6 +1071,7 @@ ideas = {
 			}
 		}
 		ROM_nordic_model3 = {
+			name = ROM_nordic_model_idea
 			on_add = {
 				log = "[GetDateText]: [Root.GetName]: add idea ROM_nordic_model3"
 				ingame_update_setup = yes
@@ -1084,6 +1088,7 @@ ideas = {
 			}
 		}
 		ROM_nordic_model4 = {
+			name = ROM_nordic_model_idea
 			on_add = {
 				log = "[GetDateText]: [Root.GetName]: add idea ROM_nordic_model4"
 				ingame_update_setup = yes
