@@ -5838,9 +5838,9 @@ focus_tree = {
 			if = {
 				limit = { has_dlc = "By Blood Alone" }
 				add_equipment_to_stockpile = {
-					type = cv_medium_plane_fighter_airframe_1
-					amount = 36
+					type = cv_medium_plane_airframe_2
 					variant_name = "Rafale M"
+					amount = 24
 					producer = FRA
 				}
 			}
