@@ -626,7 +626,6 @@ types = {
 		days_to_prepare = 5
 		days_re_enable = 180
 
-
 		category = naval_raids
 
 		command_power = 20 # command power allocation cost
@@ -638,12 +637,6 @@ types = {
 			type = equipment
 		}
 
-		allowed = {
-		}
-		# Raid Type is visible
-		visible = {
-
-		}
 		# Specific Target is visible
 		show_target = {
 			OR = {
