@@ -99,7 +99,6 @@
 			tech_naval_weapon_systems = 1
 			tech_light_guns = 1
 			tech_light_guns_1 = 1
-			tech_light_guns_2 = 1
 
 			tech_point_defense_system = 1
 			tech_point_defense_system_1 = 1
