@@ -115,10 +115,7 @@
  ROM_third_way_economics3: "Third Way Economics"
  ROM_third_way_economics4: "Third Way Economics"
  ROM_small_businesses_grant: "Small Businesses Grant"
- ROM_nordic_model: "Nordic Model"
- ROM_nordic_model2: "Nordic Model"
- ROM_nordic_model3: "Nordic Model"
- ROM_nordic_model4: "Nordic Model"
+ ROM_nordic_model_idea: "Nordic Model"
  ROM_expanded_public_sector: "Expanded Public Sector"
  ROM_welfare_statism_idea: "Welfare Statism"
  ROM_industrial_investments: "Industrial Investments"
@@ -1237,15 +1234,15 @@
  rom_econ_renewable_gain_5: "Modify §Y$ROM_romanian_economy_modifier$§! by: $renewable_energy_gain_multiplier$ §G+5%§!"
  rom_econ_productivity_growth_2: "Modify §Y$ROM_romanian_economy_modifier$§! by: $productivity_growth_modifier$ §G+2%§!"
  rom_econ_synth_oil_gain5: "Modify §Y$ROM_romanian_economy_modifier$§! by: $MODIFIER_FUEL_GAIN_FACTOR$ §G+5%§!"
- rom_econ_silo_speed15_tooltip: "Modify §Y$ROM_romanian_economy_modifier$§! by: $MODIFIER_production_speed_fuel_silo_factor$ §G+15%§!"
+ rom_econ_silo_speed15_tooltip: "Modify §Y$ROM_romanian_economy_modifier$§! by: $modifier_production_speed_fuel_silo_factor$ §G+15%§!"
  rom_econ_fuel_gain5_tooltip: "Modify §Y$ROM_romanian_economy_modifier$§! by: $MODIFIER_FUEL_GAIN_FACTOR$ §G+5%§!"
  rom_econ_renewable_gain_10: "Modify §Y$ROM_romanian_economy_modifier$§! by: $renewable_energy_gain$ §G+10%§!"
- rom_econ_nuclear_construction_speed10: "Modify §Y$ROM_romanian_economy_modifier$§! by: $MODIFIER_production_speed_nuclear_reactor_factor$ §G+10%§!"
- rom_econ_nuclear_construction_speed5: "Modify §Y$ROM_romanian_economy_modifier$§! by: $MODIFIER_production_speed_nuclear_reactor_factor$ §G+5%§!"
+ rom_econ_nuclear_construction_speed10: "Modify §Y$ROM_romanian_economy_modifier$§! by: $modifier_production_speed_nuclear_reactor_factor$ §G+10%§!"
+ rom_econ_nuclear_construction_speed5: "Modify §Y$ROM_romanian_economy_modifier$§! by: $modifier_production_speed_nuclear_reactor_factor$ §G+5%§!"
  rom_econ_nuclear_energy_generation10: "Modify §Y$ROM_romanian_economy_modifier$§! by: $nuclear_energy_generation_modifier$ §G+10%§!"
  rom_econ_nuclear_energy_generation5: "Modify §Y$ROM_romanian_economy_modifier$§! by: $nuclear_energy_generation_modifier$ §G+5%§!"
- rom_econ_renewable_construction_speed_10_tooltip:"Modify §Y$ROM_romanian_economy_modifier$§! by: $MODIFIER_production_speed_synthetic_refinery_factor$ §G+10%§!"
- rom_econ_renewable_construction_speed_5_tooltip: "Modify §Y$ROM_romanian_economy_modifier$§! by: $MODIFIER_production_speed_synthetic_refinery_factor$ §G+5%§!"
+ rom_econ_renewable_construction_speed_10_tooltip:"Modify §Y$ROM_romanian_economy_modifier$§! by: $modifier_production_speed_synthetic_refinery_factor$ §G+10%§!"
+ rom_econ_renewable_construction_speed_5_tooltip: "Modify §Y$ROM_romanian_economy_modifier$§! by: $modifier_production_speed_synthetic_refinery_factor$ §G+5%§!"
  rom_econ_network_construction_speed_5_tooltip: "Modify §Y$ROM_romanian_economy_modifier$§! by: $modifier_production_speed_internet_station_factor$ §G+5%§!"
  rom_econ_network_construction_speed_10_tooltip: "Modify §Y$ROM_romanian_economy_modifier$§! by: $modifier_production_speed_internet_station_factor$ §G+10%§!"
  production_efficiency_gain_3_5_tooltip: "Modify §Y$ROM_romanian_economy_modifier$§! by: $MODIFIER_PRODUCTION_FACTORY_EFFICIENCY_GAIN_FACTOR$ §G+3.5%§!"
@@ -1319,11 +1316,11 @@
   construction_speed_minus5_tooltip: "Modify §Y$ROM_romanian_economy_modifier$§! by: $MODIFIER_PRODUCTION_SPEED_BUILDINGS_FACTOR$ §R-5%§!"
   construction_speed5_tooltip: "Modify §Y$ROM_romanian_economy_modifier$§! by: $MODIFIER_PRODUCTION_SPEED_BUILDINGS_FACTOR$ §G+5%§!"
   construction_speed10_tooltip: "Modify §Y$ROM_romanian_economy_modifier$§! by: $MODIFIER_PRODUCTION_SPEED_BUILDINGS_FACTOR$ §G+10%§!"
-  civ_construction_speed_minus10_tooltip: "Modify §Y$ROM_romanian_economy_modifier$§! by: $MODIFIER_production_speed_industrial_complex_factor$ §R-10%§!"
-  civ_construction_speed_minus5_tooltip: "Modify §Y$ROM_romanian_economy_modifier$§! by: $MODIFIER_production_speed_industrial_complex_factor$ §R-5%§!"
-  civ_construction_speed15_tooltip: "Modify §Y$ROM_romanian_economy_modifier$§! by: $MODIFIER_production_speed_industrial_complex_factor$ §G+15%§!"
-  civ_construction_speed10_tooltip: "Modify §Y$ROM_romanian_economy_modifier$§! by: $MODIFIER_production_speed_industrial_complex_factor$ §G+10%§!"
-  civ_construction_speed5_tooltip: "Modify §Y$ROM_romanian_economy_modifier$§! by: $MODIFIER_production_speed_industrial_complex_factor$ §G+5%§!"
+  civ_construction_speed_minus10_tooltip: "Modify §Y$ROM_romanian_economy_modifier$§! by: $modifier_production_speed_industrial_complex_factor$ §R-10%§!"
+  civ_construction_speed_minus5_tooltip: "Modify §Y$ROM_romanian_economy_modifier$§! by: $modifier_production_speed_industrial_complex_factor$ §R-5%§!"
+  civ_construction_speed15_tooltip: "Modify §Y$ROM_romanian_economy_modifier$§! by: $modifier_production_speed_industrial_complex_factor$ §G+15%§!"
+  civ_construction_speed10_tooltip: "Modify §Y$ROM_romanian_economy_modifier$§! by: $modifier_production_speed_industrial_complex_factor$ §G+10%§!"
+  civ_construction_speed5_tooltip: "Modify §Y$ROM_romanian_economy_modifier$§! by: $modifier_production_speed_industrial_complex_factor$ §G+5%§!"
   factory_output_minus5_tooltip: "Modify §Y$ROM_romanian_economy_modifier$§! by: $MODIFIER_INDUSTRIAL_CAPACITY_FACTOR$ §R-5%§!"
   factory_output3_tooltip: "Modify §Y$ROM_romanian_economy_modifier$§! by: $MODIFIER_INDUSTRIAL_CAPACITY_FACTOR$ §G+3%§!"
   factory_output5_tooltip: "Modify §Y$ROM_romanian_economy_modifier$§! by: $MODIFIER_INDUSTRIAL_CAPACITY_FACTOR$ §G+5%§!"
@@ -1340,10 +1337,10 @@
   factory_base_production_efficiency5_tooltip: "Modify §Y$ROM_romanian_economy_modifier$§! by: $MODIFIER_PRODUCTION_FACTORY_START_EFFICIENCY_FACTOR$ §G+5%§!"
   factory_base_production_efficiency10_tooltip: "Modify §Y$ROM_romanian_economy_modifier$§! by: $MODIFIER_PRODUCTION_FACTORY_START_EFFICIENCY_FACTOR$ §G+10%§!"
   factory_base_production_efficiency15_tooltip: "Modify §Y$ROM_romanian_economy_modifier$§! by: $MODIFIER_PRODUCTION_FACTORY_START_EFFICIENCY_FACTOR$ §G+15%§!"
-  infrastructure_construction_speed5_tooltip: "Modify §Y$ROM_romanian_economy_modifier$§! by: $MODIFIER_production_speed_infrastructure_factor$ §G+5%§!"
-  infrastructure_construction_speed5_minus_tooltip: "Modify §Y$ROM_romanian_economy_modifier$§! by: $MODIFIER_production_speed_infrastructure_factor$ §R-5%§!"
-  infrastructure_construction_speed10_tooltip: "Modify §Y$ROM_romanian_economy_modifier$§! by: $MODIFIER_production_speed_infrastructure_factor$ §G+10%§!"
-  railway_construction_speed15_tooltip: "Modify §Y$ROM_romanian_economy_modifier$§! by: $MODIFIER_production_speed_rail_way_factor$ §G+15%§!"
+  infrastructure_construction_speed5_tooltip: "Modify §Y$ROM_romanian_economy_modifier$§! by: $modifier_production_speed_infrastructure_factor$ §G+5%§!"
+  infrastructure_construction_speed5_minus_tooltip: "Modify §Y$ROM_romanian_economy_modifier$§! by: $modifier_production_speed_infrastructure_factor$ §R-5%§!"
+  infrastructure_construction_speed10_tooltip: "Modify §Y$ROM_romanian_economy_modifier$§! by: $modifier_production_speed_infrastructure_factor$ §G+10%§!"
+  railway_construction_speed15_tooltip: "Modify §Y$ROM_romanian_economy_modifier$§! by: $modifier_production_speed_rail_way_factor$ §G+15%§!"
   production_retention10_tooltip: "§GProduction Efficiency Retention +10%§!"
   research_speed5_tooltip: "Modify §Y$ROM_romanian_economy_modifier$§! by: $MODIFIER_RESEARCH_SPEED_FACTOR$ §G+5%§!"
   army_xp10_tooltip: "Modify §Y$ROM_armed_forces_modifier$§! by: $MODIFIER_XP_GAIN_ARMY$ §G+10%§!"
@@ -1396,7 +1393,7 @@
  PMR_ROM_fascism_subject: "Transnistrian Governorate"
  PMR_ROM_neutrality_subject: "Transnistrian Governorate"
  PMR_ROM_communism_subject: "Transnistrian Governorate"
- 
+
  ##MISC##
  ROM_3704_name: "Ismail"
  ROM_6727_name: "Cetatea Alba"
