@@ -8,12 +8,15 @@ v1.12.1
   - Fixed the broken display for the "Storm the Tulkarm Fort" decision not showing up with the right information
   - Fixed the Israel "The Passover Massacre" operations when failed Gaza Strip becomes overlord of Israel and instead changed it so that Israel becomes the overlord over the Gaza strip
   - Fixed the "Resource Exports" not properly taking into account subjects when calculating your resource export income
+  - Fixed the "Rafale Planes" focus not properly giving the Rafale M to India
+  - Fixed the broken Romanian tooltips for the economic focuses
 
  Database:
   - Added a new scripted trigger "is_autonomy_that_cannot_change_level" to check if a country has a special autonomy level that cannot be changed
   - Changed Destroyers back to being Capital Ships instead of Screen Ships. This will be reverted in a future naval rework
   - Removed older "anti_air artillery" type from ship classes for the older missile system
   - Removed a ton of duplicate equipment variants for the "Error Stop" variant so the game should start a bit faster
+  - Russia no longer starts with the "Naval Guns 2025" tech in 2000. Silly time travelers
 
  Game Rules:
   - Added a new Game Rule "Disable Investment Bankruptcy Lock" that allows you to send investments to countries while you have the "Bankruptcy Incoming" mission active
